[project]
name = "workout-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.3",
    "asyncio>=4.0.0",
    "asyncpg==0.31.0",
    "fastapi>=0.128.6",
    "psycopg2==2.9.11",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
